Bug 1540921 - don't throw when postMessage-ing a closing/closed DedicatedWorker r=asuth

This behavior is consistent with calling MessagePort.postMessage when the
entangled port is null.

Differential Revision: https://phabricator.services.mozilla.com/D55849

--HG--
extra : moz-landing-system : lando